Clearned up some code.